# To-do_Application_FastApi

./: README.md  docker-compose.yml
backend/: .env.example  Dockerfile  pyproject.toml  requirements.txt
backend/src/mysite/: __init__.py  main.py
frontend/static/: index.html
mongodb/: .env.example
