[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "mysite"
requires-python = ">=3.12"
version = "0.0.1"
dependencies = [
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "motor==3.6.0",
    "pydantic==2.5.0"
]
readme = "README.md"

[project.scripts]
mysite = "mysite.main:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["mysite*"]